generate ai modal improvements

--- a/views/category.ejs
+++ b/views/category.ejs
@@ -647,6 +647,38 @@
               style="display: none"
               >Zvýšit limit na 150 stran</a
             >
+            <a
+              href="/premium"
+              id="premium-button-sub"
+              class="btn btn-danger mt-2 mx-1"
+              style="display: none"
+              >Vyzkoušet Edookio Premium</a
+            >
+            <a
+              href="/credits"
+              id="premium-button-credits"
+              class="btn btn-outline-danger mt-2 mx-1"
+              style="display: none"
+              >Navýšit kredity jednorázově</a
+            >
+            <a
+              href="/credits"
+              id="premium-button-credits-one-time"
+              class="btn btn-danger mt-2 mx-1"
+              style="display: none"
+              >Navýšit kredity</a
+            >
+            <button class="btn btn-danger my-2" id="retry-generate-content-btn">
+              Zkusit znovu
+            </button>
+          </div>
+          <div id="premium-advantages-container">
+            <p>S Edookio Premium získáš</p>
+            <ul>
+              <li>až 1250 AI kreditů měsíčně</li>
+              <li>neomezené procházení testových otázek</li>
+              <li>...</li>
+            </ul>
           </div>
         </div>
       </div>
