--- a/views/category.ejs
+++ b/views/category.ejs
@@ -639,7 +639,7 @@
           </h5>
           <hr class="color-primary mx-5" style="height: 2px" />
           <p class="text-center" id="document-error-text"></p>
-          <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-center mt-3">
             <a
               href="/premium"
               id="premium-button"
@@ -672,13 +672,47 @@
               Zkusit znovu
             </button>
           </div>
-          <div id="premium-advantages-container">
-            <p>S Edookio Premium získáš</p>
-            <ul>
-              <li>až 1250 AI kreditů měsíčně</li>
-              <li>neomezené procházení testových otázek</li>
-              <li>...</li>
-            </ul>
+          <div id="premium-advantages-container" style="display: none">
+            <div class="height-85 premium-card-info-div">
+              <hr class="color-primary mx-5 my-4" style="height: 2px" />
+              <p class="text-center mt-4 mb-2 co-ziskas-text">
+                <b
+                  >Co získáš navíc s
+                  <strong class="text-primary">Edookio Premium</strong>?</b
+                >
+              </p>
+              <ul class="text-smaller premium-card-list mx-5">
+                <li>
+                  <div class="d-flex align-items-center justify-content-center">
+                    <div>
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                    <div class="px-2">neomezený přístup k otázkám</div>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="d-flex align-items-center justify-content-center">
+                    <div>
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                    <div class="px-2">až 1 250 AI kreditů / měsíc</div>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="d-flex align-items-center justify-content-center">
+                    <div>
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                    <div class="px-2">150 stran / dokument</div>
+                  </div>
+                </li>
+              </ul>
+              <div class="d-flex justify-content-center">
+                <a href="/premium" class="btn btn-danger mb-2">Zjistit více</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
