--- a/views/credits.ejs
+++ b/views/credits.ejs
@@ -151,6 +151,63 @@
         </div>
     </section>
 
+    <section class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2 text-center mt-4 mb-0">
+                    <h1 class="">Časté otázky</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="table-plans">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2">
+                    <div class="accordion" id="faqAccordion">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              Co jsou AI kredity?
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">
+                              <p><strong>AI kredity</strong> jsou naše <strong>virtuální měna</strong>, kterou můžeš využít k tvorbě obsahu s využitím umělé inteligence. <strong>Jeden kredit</strong> odpovídá jedné kartičce a otázce (vždy jsou vytvářeny společně, cena je tedy 0,5 kreditu "za kus"). Každý měsíc dostaneš určitý počet kreditů, které můžeš využít k tvorbě nových otázek. Pokud by ti kredity nestačily, můžeš si je dokoupit. Ze zkušenosti víme, že <strong>1 000 kreditů</strong> je <strong>optimální měsíční množství</strong> pro pravidelné vytváření obsahu.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                Proč jsou AI kredity nutné?
+                              </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+                              <div class="accordion-body">
+                                <p>Kredity jsou nutné pro udržitelnost Edookia, protože za data zpracovaná umělou inteligencí platíme společnosti OpenAI, používáme totiž její nejnovější model <strong>gpt-4o</strong>.</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                                Musím kupovat AI kredity jednorázově?
+                              </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
+                              <div class="accordion-body">
+                                <p><strong>Nemusíš</strong>. AI kredity jsou také součástí předplatného Edookio Premium. V měsíčním předplatném je zahrnuto 1 000 AI kreditů měsíčně, v ročním předplatném 1 250 kreditů měsíčně. <a href="/premium">Zjistit více o předplatném...</a></p>
+                              </div>
+                            </div>
+                          </div>
+                      </div>
+                </div>               
+            </div>
+        </div>
+    </section>
+
     <section>
         <div class="container">
             <div class="row mt-lg-3">
@@ -162,6 +219,8 @@
             </div>
         </div>
     </section>
+
+
 
     
 </main>
