--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -13,16 +13,7 @@
             <link rel="stylesheet" href="/css/custom.css">
             <link rel="stylesheet" href="/css/leaderboard.css">
             <!-- META TAGS -->
-            <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
-            <meta name="author"                    content="Chilero s. r. o.">
-            <meta name="keywords"                  content="pravnicke, karticky, inlege, studium, prava, podklady, priprava">
-            <meta name="twitter:title"             content="Studuj práva efektivně s InLege">
-            <meta name="twitter:description"       content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
-            <meta name="twitter:image"             content="https://www.inlege.cz/img/fb_sharing.png">
-            <meta property="og:url"                content="https://www.inlege.cz/" />
-            <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
-            <meta property="og:description"        content="Tisíce interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
-            <meta property="og:image"              content="/img/fb_sharing.png" />
+            <%- include('./partials/meta') %>
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400&family=Roboto&display=swap" rel="stylesheet">
