--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -1,56 +1,78 @@
 <!DOCTYPE html>
 <html lang="cs">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InLege</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap_customised.css">
-    <link rel="stylesheet" href="/css/custom.css">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap_customised.css" />
+    <link rel="stylesheet" href="/css/custom.css" />
     <!-- META TAGS -->
-    <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
-    <meta name="author"                    content="Chilero s. r. o.">
-    <meta name="keywords"                  content="pravnicke, karticky, inlege, studium, prava, podklady, priprava">
-    <meta name="twitter:title"             content="Studuj práva efektivně s InLege">
-    <meta name="twitter:description"       content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
-    <meta name="twitter:image"             content="https://www.inlege.cz/img/fb_sharing.png">
-    <meta property="og:url"                content="https://www.inlege.cz/" />
-    <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
-    <meta property="og:description"        content="Tisíce interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
-    <meta property="og:image"              content="https://www.inlege.cz/img/fb_sharing.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400&family=Roboto&display=swap" rel="stylesheet">
-</head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9NBWFYGZ1"></script>
-    <script>
+    <%- include('../partials/meta') %>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-W9NBWFYGZ1"
+  ></script>
+  <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-    gtag('config', 'G-W9NBWFYGZ1');
-    gtag('config', 'AW-990983899');
-    </script>
-<body class="d-flex flex-column vh-100">
-    <%- include('../partials/navbar') %> 
+    gtag("config", "G-W9NBWFYGZ1");
+    gtag("config", "AW-990983899");
+  </script>
+  <body class="d-flex flex-column vh-100">
+    <%- include('../partials/navbar') %>
     <main class="container mt-5">
-        <%- include('../partials/alert') %>
-        <%- body %>
+      <%- include('../partials/alert') %> <%- body %>
     </main>
-    <%- include('../partials/footer') %> 
-    <%- include('../partials/cookiesBar')%>
+    <%- include('../partials/footer') %> <%- include('../partials/cookiesBar')%>
     <!-- JS for Bootstrap -->
 
-    <script src="/js/jquery.min.js" ></script>
-    <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
-    <script src="/js/cookies.js" ></script>
-    <script src="/js/custom.js" ></script>
-</body>
+    <script src="/js/jquery.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/c9f8e59b45.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/cookies.js"></script>
+    <script src="/js/custom.js"></script>
+  </body>
 </html>
