--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -7,16 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=no">
   <title>Testové otázky</title>
   <!-- META TAGS -->
-  <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
-  <meta name="author"                    content="Chilero s. r. o.">
-  <meta name="keywords"                  content="pravnicke, karticky, inlege, studium, prava, podklady, priprava">
-  <meta name="twitter:title"             content="Studuj práva efektivně s InLege">
-  <meta name="twitter:description"       content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
-  <meta name="twitter:image"             content="https://www.inlege.cz/img/fb_sharing.png">
-  <meta property="og:url"                content="https://www.inlege.cz/" />
-  <meta property="og:title"              content="Studuj práva efektivně s InLege" />
-  <meta property="og:description"        content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!" />
-  <meta property="og:image"              content="https://www.inlege.cz/img/fb_sharing.png" />
+  <%- include('./partials/meta') %>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
