--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,7 +59,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-5 offset-md-1 my-5 p-4">
-              <h1 class="jumbotron-heading mb-3">Vítej zpět v <span class="text-primary">Edookio AI</span></h1>
+              <h1 class="jumbotron-heading mb-3">Mé studium <span class="text-primary">Edookio AI</span></h1>
               <p class="lead">
                 Vytvářej nové předměty, přidávej balíčky a studuj efektivně s pomocí AI
               </p>
@@ -123,7 +123,7 @@
                   </p>
 
                   <hr style="color: #e80f88" />
-                  <p class="header mb-2">Tvůj přehled</p>
+                  <p class="header mb-2">Můj přehled</p>
                   <ul class="stats-list text-smaller">
                     <li class="stats-item">
                       <span>Kartiček celkem</span
