--- a/views/legal/gdpr.ejs
+++ b/views/legal/gdpr.ejs
@@ -17,9 +17,9 @@
           Krajským soudem v Ostravě, oddíl C, vložka 81220 (dále také jen jako
           „Chilero“) jako správce osobních údajů Vás jako
           <strong>uživatele internetového portálu</strong>
-          <a href="https://www.inlege.cz">www.inlege.cz</a>
-          informuje o níže popsaném shromažďování a jiném zpracování osobních
-          údajů a zásadách ochrany soukromí.
+          <a href="https://www.edookio.com">www.edookio.com</a> a aplikace
+          Edookio informuje o níže popsaném shromažďování a jiném zpracování
+          osobních údajů a zásadách ochrany soukromí.
         </p>
         <p>V těchto zásadách ochrany osobních údajů vysvětlujeme:</p>
         <ul>
@@ -68,7 +68,7 @@
         <p>
           Souhlas se zpracováním osobních údajů pro účely zasílání newsletteru a
           obchodních sdělení můžete kdykoli odvolat zasláním zprávy o odvolání
-          souhlasu na emailovou adresu <strong>info@inlege.cz</strong>.
+          souhlasu na emailovou adresu <strong>edookio@edookio.com</strong>.
           Newslettery a obchodní sdělení Vám již v takovém případě zasílat
           nebudeme.
         </p>
@@ -86,10 +86,9 @@
         <p>Zpracováváme zejména následující údaje:</p>
         <ol type="a">
           <li>jméno a příjmení</li>
-          <li>obchodní firma</li>
-          <li>adresa bydliště nebo sídlo společnosti</li>
-          <li>telefonický kontakt</li>
           <li>emailová adresa</li>
+          <li>statistiky vygenerované užívaním portálu</li>
+          <li>obsah vygenerovaný a vytvořený při užívání portálu</li>
         </ol>
       </div>
     </div>
@@ -234,7 +233,7 @@
         <p>
           Všechna Vaše práva můžete uplatnit tak, že nás kontaktujete dle Vašeho
           výběru na shora uvedené doručovací adrese nebo na emailové adrese
-          <strong>info@inlege.cz</strong>.
+          <strong>edookio@edookio.com</strong>.
         </p>
         <p>
           V případě, že máte pocit, že s Vašimi osobními údaji nenakládáme
@@ -257,12 +256,12 @@
       <div class="col-12">
         <p>
           Naše webové stránky
-          <a href="https://www.inlege.cz">www.inlege.cz</a> nejsou určeny pro
-          děti mladší 16 let. Osobní údaje dětí mladších 16 let v této
+          <a href="https://www.edookio.com">www.edookio.com</a> nejsou určeny
+          pro děti mladší 16 let. Osobní údaje dětí mladších 16 let v této
           souvislosti nezpracováváme. Pokud si myslíte, že nám nějaké dítě
           poskytlo osobní údaje, prosím kontaktujte nás na emailové adrese
-          <strong>info@inlege.cz</strong> a učiníme opatření ke smazání takových
-          údajů.
+          <strong>edookio@edookio.com</strong> a učiníme opatření ke smazání
+          takových údajů.
         </p>
       </div>
     </div>
