--- a/views/review/showAll.ejs
+++ b/views/review/showAll.ejs
@@ -1,7 +1,40 @@
-<% layout('layouts/boilerplate.ejs') %>
-<div class="container">
+<!DOCTYPE html>
+<html lang="cs">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Edookio AI Premium</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/bootstrap_customised.css">
+        <link rel="stylesheet" href="/css/custom.css">
+        <link rel="stylesheet" href="/css/landing.css">
+        <link rel="stylesheet" href="/css/premium.css">
+        <!-- META TAGS -->
+        <%- include('../partials/meta') %>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400&family=Roboto&display=swap" rel="stylesheet">
+    </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W9NBWFYGZ1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    <div class="row">
+  gtag('config', 'G-W9NBWFYGZ1');
+  gtag('config', 'AW-990983899');
+</script>
+<body class="d-flex flex-column vh-100">
+    <%- include('../partials/navbar') %> 
+
+    <main role="main"> 
+    <%- include('../partials/alert') %>
+    <div class="row pt-5">
       <div class="offset-1 col-10 d-flex justify-content-between mb-4">
           <% if (!demo) { %>
             <a href="/category/<%= section.categoryId %>" class="btn btn-outline-danger d-flex justify-content-center align-items-center px-3"><i class="fas fa-arrow-left"></i></a>
@@ -24,16 +57,18 @@
   <div class="row mt-4 mb-3">
     <div class="offset-sm-1 col-sm-5 d-flex flex-column justify-content-between align-items-center">
       <h4 class="mb-2">Kartičky</h4>
-      <% if (!demo) { %>
-        <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/newCard" class="btn btn-sm btn-outline-danger">Přidat kartičku</a>
-      <% } else if (generatedCategoryId && generatedSectionId) { %>
-        <a href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/card30/1?mode=unknown" class="btn btn-sm btn-danger">Studijní zobrazení</a>
-      <% } %>
+      <div class="mb-3">
+        <% if (!demo) { %>
+          <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/newCard" class="btn btn-sm btn-outline-danger">Přidat kartičku</a>
+        <% } else if (generatedCategoryId && generatedSectionId) { %>
+          <a href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/card30/1?mode=unknown" class="btn btn-sm btn-danger">Studijní zobrazení</a>
+        <% } %>
+      </div>
     </div>  
     <div class="col-sm-5 d-flex flex-column justify-content-center align-items-center">
       <h4 class="mb-2">Otázky</h4>
       
-      <div>
+      <div class="mb-3">
           <!--
             <% if (section.questions && !containesCardWithoutQuestion) { %>  
                 <a href="#" class="btn btn-sm btn-outline-danger" style='min-width:124px' data-bs-toggle="modal" data-bs-target="#questionsExistModal">Vygenerovat otázky z kartiček</a>
@@ -51,7 +86,6 @@
       </div>
       
     </div>
-  </div>
 
   <% pairs.forEach((pair) => { 
        const card = pair.card;
@@ -185,5 +219,17 @@
     </div>
     </div>
 </div>
+</main>
+    <%- include('../partials/footer') %>
+    <%- include('../partials/cookiesBar')%> 
+    <!-- JS for Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
+    <script src="/js/jquery.min.js" ></script>
+    <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/cookies.js"></script>
+    <script type="text/javascript" src="/js/custom.js"></script>
+    <script src="/js/review.js"></script>
+</body>
+</html>
 
-<script src="/js/review.js"></script>
